crates/celerrate_rules/tests/snapshots/render__anatomy.snap
---
source: crates/celerrate_rules/tests/render.rs
assertion_line: 115
expression: "report.blocks.join(\"\\n\\n\")"
---
error[CEL0030]: unknown method `svae` on `App\User`
 --> src/Caller.php:6:12
  |
4 | function render(User $user): void
  |                 ---- the receiver is typed `App\User` here
5 | {
6 |     $user->svae();
  |            ^^^^
  |
  = note: `App\User` declares no method or magic accessor named `svae`
  = help: did you mean `save`?
  |
6 -     $user->svae();
6 +     $user->save();
  |
